--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,13 @@
 language: python
 
 python:
-  - 2.6
   - 2.7
+  - 3.5
+
+env:
+  global:
+    - PSYCOPG2_TESTDB=psycopg2_test
+    - PSYCOPG2_TESTDB_HOST=localhost
 
 before_script:
   - psql -c 'create database psycopg2_test;' -U postgres
